check if location valid or not

--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,12 @@
     background: #ddd; 
     border-radius: 10px;
   }
+
+  @layer base {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
   
