--- a/src/Components/Common/Loader.css
+++ b/src/Components/Common/Loader.css
@@ -1,58 +1,94 @@
 .loader {
-    --dim: 3rem;
-    width: var(--dim);
-    height: var(--dim);
-    position: relative;
-    animation: spin988 2s linear infinite;
+  --dim: 3rem;
+  width: var(--dim);
+  height: var(--dim);
+  position: relative;
+  animation: spin988 2s linear infinite;
 }
 .loader .circle {
-    --color: #4DBD7A;
-    --dim: 1.2rem;
-    width: var(--dim);
-    height: var(--dim);
-    background-color: var(--color);
-    border-radius: 50%;
-    position: absolute;
+  --color: #4dbd7a;
+  --dim: 1.2rem;
+  width: var(--dim);
+  height: var(--dim);
+  background-color: var(--color);
+  border-radius: 50%;
+  position: absolute;
 }
 .loader .circle:nth-child(1) {
-    top: 0;
-    left: 0;
+  top: 0;
+  left: 0;
 }
 .loader .circle:nth-child(2) {
-    top: 0;
-    right: 0;
+  top: 0;
+  right: 0;
 }
 .loader .circle:nth-child(3) {
-    bottom: 0;
-    left: 0;
+  bottom: 0;
+  left: 0;
 }
 .loader .circle:nth-child(4) {
-    bottom: 0;
-    right: 0;
+  bottom: 0;
+  right: 0;
 }
 
 @keyframes spin988 {
-    0% {
-        transform: scale(1) rotate(0);
-    }
+  0% {
+    transform: scale(1) rotate(0);
+  }
 
-    20%,
-    25% {
-        transform: scale(1.3) rotate(90deg);
-    }
+  20%,
+  25% {
+    transform: scale(1.3) rotate(90deg);
+  }
 
-    45%,
-    50% {
-        transform: scale(1) rotate(180deg);
-    }
+  45%,
+  50% {
+    transform: scale(1) rotate(180deg);
+  }
 
-    70%,
-    75% {
-        transform: scale(1.3) rotate(270deg);
-    }
+  70%,
+  75% {
+    transform: scale(1.3) rotate(270deg);
+  }
 
-    95%,
-    100% {
-        transform: scale(1) rotate(360deg);
-    }
+  95%,
+  100% {
+    transform: scale(1) rotate(360deg);
+  }
+}
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 28px; /* Reduced width */
+  height: 28px; /* Reduced height */
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 24px; /* Reduced width */
+  height: 24px; /* Reduced height */
+  margin: 3px; /* Reduced margin */
+  border: 3px solid #fff; /* Reduced border width */
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
